<resources>
    <string name="app_name">Ini Aku</string>
    <string name="app_name_2">Ini Aku</string>
    <string name="version">V.007</string>
    <string name="assignment">AKB,2019,IF-7</string>
    <string name="title_profile">Profil</string>
    <string name="title_contact">Contact</string>
    <string name="title_friends">Teman</string>
    <string name="title_about">Tentang</string>
    <string name="title_friend_detail">Detail Teman</string>
    <string name="_title_add_friend">Tambah Teman </string>
    <string name="application">Aplikasi</string>
    <string name="creator">Creator</string>
    <string name="my_name">Andika Dirgantara</string>
    <string name="my_nim">10116291</string>
    <string name="my_class">IF-7</string>
    <string name="major">Teknik Informatika</string>
    <string name="university">UNIKOM BANDUNG</string>
    <string name="my_desc">Hanya penggemar Photographer untuk mencari jodoh</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="my_number">082291657642</string>
    <string name="my_email">Andikadirgantara1@gmail.com</string>
    <string name="my_ig">Andikacikke</string>
    <string name="name">Name</string>
    <string name="nim">NIM</string>
    <string name="class_">Kelas</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="tag_line">Enjoy the App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Belum Punya Akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="edit_friend">Edit Teman</string>
    <string name="login_failed_msg">Login Gagal, Username atau Password salah</string>
    <string name="sign_up_failed_msg">Daftar gagal, telah di gunakan!</string>
    <string name="title_home">Beranda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_you_logged_in_as">Selamat Datang</string>
</resources>
