<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarContact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contact"
                android:textColor="@android:color/black"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgMyAva"
            android:layout_width="142dp"
            android:layout_height="100dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ava1"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="89dp"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="112dp"
            android:text="10116291 ____  if-7"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/tvMyName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/toolbarContact"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="99dp"
            android:text="@string/my_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgMyAva"
            android:layout_marginTop="102dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <RelativeLayout
                android:id="@+id/lytPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_phone_android_black_24dp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="@string/phone"
                    android:textColor="@color/cardview_dark_background"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPhone"
                    android:layout_toEndOf="@id/imgPhone"
                    android:text="@string/my_number"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytIg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/imgIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_instagram"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/tvIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="@string/instagram"
                    android:textColor="@color/cardview_dark_background"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvIg"
                    android:layout_toEndOf="@id/imgIg"
                    android:text="@string/my_ig"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/item_background">

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_mail_outline_black_24dp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="@string/email"
                    android:textColor="@color/cardview_dark_background"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEmail"
                    android:layout_toEndOf="@id/imgEmail"
                    android:text="@string/my_email"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/item_background">

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>